<resources>
    <string name="app_name">BMI</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="all_clear">AC</string>
    <string name="go">GO</string>

    <string name="weight">Weight</string>
    <string name="Height">Height</string>

    <string name="kilogram">Kilogram</string>
    <string name="pound">Pound</string>

    <string name="centimeter">Centimeter</string>
    <string name="meter">Meter</string>

    <string name="feet">Feet</string>
    <string name="inch">Inch</string>

    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Over weight</string>

    <string name="BMI">BMI</string>
    <string name="Information">Information</string>

    <string name="BMI_underweight">16.0</string>
    <string name="BMI_normal_start">18.5</string>
    <string name="BMI_normal_end">25.0</string>
    <string name="BMI_overweight">40.0</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="delete">Delete</string>

    <string-array name="weight_units">
        <item id="kilogram">Kilogram</item>
        <item id="pound">Pound</item>
    </string-array>

    <string-array name="height_units">
        <item id="meter">Meter</item>
        <item id="centimeter">Centimeter</item>
        <item id="feet">Feet</item>
        <item id="inch">Inch</item>
    </string-array>
</resources>
