<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:columnCount="4"
    android:orientation="vertical"
    android:rowCount="4">

    <FrameLayout
        android:id="@+id/number_seven"
        style="@style/NumPadButton"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/seven" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_four"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/four" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_one"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/one" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_zero"
        style="@style/NumPadButton"
        android:layout_columnSpan="2"
        android:layout_columnWeight="2"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/zero" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_eight"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/eight" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_five"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/five" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_two"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/two" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_nine"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/nine" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_six"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/six" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/number_three"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/three" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/decimal"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/decimal" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/all_clear"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="@string/all_clear"
            android:textColor="@color/colorAccent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/delete"
        style="@style/NumPadButton"
        android:background="@drawable/border">

        <TextView
            style="@style/NumPadText"
            android:gravity="center"
            android:text="X" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/go"
        style="@style/NumPadButton"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:background="@color/colorAccent">

        <TextView
            style="@style/NumPadText"
            android:text="@string/go"
            android:textColor="@color/white" />
    </FrameLayout>

</GridLayout>